VSE strips forget their masks' names after full copy of scene #44458

Closed
opened 2015-04-20 10:24:08 +02:00 by Oleg Yegorov · 9 comments

System Information
Ubuntu, Xubuntu

Blender Version
Broken: 2.74, 2.73, 2.72...

Short description of error
VSE strips forget their masks' names after full copy of scene

Exact steps for others to reproduce the error
In VSE add any video/image strip, then add image mask.
Add to first strip mask modifier and type name of second strip.
Then Add new scene and select Full copy.
In new scene mask name in mask modifier presents.
Save, close, open.
Mask modifier name is empty!

**System Information** Ubuntu, Xubuntu **Blender Version** Broken: 2.74, 2.73, 2.72... **Short description of error** VSE strips forget their masks' names after full copy of scene **Exact steps for others to reproduce the error** In VSE add any video/image strip, then add image mask. Add to first strip mask modifier and type name of second strip. Then Add new scene and select Full copy. In new scene mask name in mask modifier presents. Save, close, open. Mask modifier name is empty!
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Oleg-Egorov

Added subscriber: @Oleg-Egorov

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

A simple file with some placeholder images should be provided to make things clearer. Not sure what "image mask" means here.

A simple file with some placeholder images should be provided to make things clearer. Not sure what "image mask" means here.
Author

Bug_T44458.zip

There are two Scenes.
First is original and second is Full copy of first.

In the scenes second strip has strip modifier Mask and uses first strip as mask.

In the second scene modifier forgets what strip it uses as mask.

[Bug_T44458.zip](https://archive.blender.org/developer/F164607/Bug_T44458.zip) There are two Scenes. First is original and second is Full copy of first. In the scenes second strip has strip modifier Mask and uses first strip as mask. In the second scene modifier forgets what strip it uses as mask.

This issue was referenced by 9b4c8a2507

This issue was referenced by 9b4c8a25076fcba566997137140fd23166d52654

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9b4c8a2507.

Closed by commit 9b4c8a2507.
Author

Thank you!

Thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44458
No description provided.